--- a/index.html
+++ b/index.html
@@ -1643,7 +1643,7 @@
       <div class="sqs-layout sqs-grid-12 columns-12" data-type="page-section" id="page-section-5f0eb905209bd24264a8b0d6"><div class="row sqs-row"><div class="col sqs-col-12 span-12"><div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-5f0eb905362e23738bd7e491"><div class="sqs-block-content">
 
 <div class="sqs-html-content">
-  <h2 style="text-align:center;white-space:pre-wrap;">&nbsp;Portfolio</h2>
+  <h2 style="text-align:center;white-space:pre-wrap;">&nbsp;Lara's Nails</h2>
 </div>
 
 
