add formspree link

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ flexibility(document.documentElement);
 
 
 <div class="wp-block-uagb-forms uagb-forms__outer-wrap uagb-block-jmthpae1 uagb-forms__default-btn">
-<form class="uagb-forms-main-form" method="post" autocomplete="on" name="uagb-form-jmthpae1">
+<form class="uagb-forms-main-form" method="post" action="https://formspree.io/f/myzzjzbv" autocomplete="on" name="uagb-form-jmthpae1">
 <div class="wp-block-uagb-forms-name uagb-forms-name-wrap uagb-forms-field-set uagb-block-8syjgs9a">
 <div class="uagb-forms-name-label required uagb-forms-input-label" id="8syjgs9a">Ime</div>
 <input type="text" placeholder="" required class="uagb-forms-name-input uagb-forms-input" name="8syjgs9a" autocomplete="given-name">
