--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ flexibility(document.documentElement);
 <div class="inherit-container-width wp-block-group alignwide is-layout-constrained wp-block-group-is-layout-constrained">
 <div class="wp-block-media-text alignwide has-media-on-the-right is-stacked-on-mobile is-vertically-aligned-center" style="grid-template-columns:auto 43%">
 <div class="wp-block-media-text__content">
-<h1 class="wp-block-heading has-text-align-left has-white-color has-text-color">Fixamo vsako računalniško težavo!</h1>
+<h1 class="wp-block-heading has-text-align-left has-white-color has-text-color">Fixamo vašo računalniško težavo!</h1>
 
 
 
